# training_tasks

./: info.txt
1/src/: main.c
10/src/: part1.c  part2.c
11/src/: main.c
12/src/: main.c
13/src/: main.c
14/src/: main.c
15/: CMakeLists.txt
15/src/: main.c
17/src/: main.c
18/src/: main.c  main2.c
19/src/: main.c
2/src/: part1.c  part2.c
3/: CMakeLists.txt
3/src/: part1.c  part2.c
4/src/: part1.c  part2.c
6/src/: part2.c
7/src/: part1.c  part2.c
8/: CMakeLists.txt
8/src/: part2.c
9/src/: part1.c  part2.c
c_tasks/1/: CMakeLists.txt  main.c
c_tasks/1/src/: main.c
c_tasks/10/: part1.c  part2.c
c_tasks/11/: main.c
c_tasks/2/: part1.c  part2.c
c_tasks/2/src/: part1.c
c_tasks/3/: part1.c  part2.c
c_tasks/3/src/: part1.c
c_tasks/4/: part1.c  part2.c
c_tasks/6/: part1.c  part2.c
c_tasks/6/src/: part1.c
c_tasks/7/: part1.c  part2.c
c_tasks/7/src/: part1.c
c_tasks/8/: part1.c  part2.c
c_tasks/8/src/: part1.c
c_tasks/9/: part1.c  part2.c
c_tasks/9/src/: part1.c
